@@ -16,6 +16,7 @@ android {
     useLibrary 'android.test.base'
     useLibrary 'android.test.mock'
 
+
     defaultConfig {
         applicationId "com.stonefacesoft.ottaa"
         minSdkVersion 21
@@ -26,6 +27,9 @@ android {
         multiDexEnabled = true
         resConfigs "ar,ca,da,en,es,fr,it,nb,pt,sw"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"//
+        testHandleProfiling true
+        testFunctionalTest true
+
 
     }
     dexOptions {
@@ -41,6 +45,7 @@ android {
             zipAlignEnabled true
         }
         sourceSets.debug.resources.srcDirs = ['src/debug/res']
+
         release {
             minifyEnabled true
             shrinkResources true
@@ -48,7 +53,7 @@ android {
             zipAlignEnabled true
         }
         lintOptions {
-                abortOnError false
+            abortOnError false
         }
 
 
@@ -77,6 +82,14 @@ android {
 //            exclude 'META-INF/LICENSE.txt'
 //            exclude 'META-INF/NOTICE.txt'
 //        }
+    testOptions{
+        unitTests.returnDefaultValues = true
+        unitTests.includeAndroidResources true
+        unitTests.all{
+            jvmArgs '-XX:MaxPermSize=256m'
+        }
+    }
+
     compileOptions {
         targetCompatibility 1.8
         sourceCompatibility 1.8
@@ -109,7 +122,7 @@ dependencies {
     // Required -- JUnit 4 framework
     implementation files('libs/SimpleNLG-4.4.8.jar')
     implementation('com.google.dagger:dagger:2.27') {
-       // exclude group: 'com.google.guava'
+        // exclude group: 'com.google.guava'
     }
 
 
@@ -136,19 +149,30 @@ dependencies {
     implementation 'com.google.android.gms:play-services-base:17.6.0'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
     //implementation
-    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.android.volley:volley:1.2.0'
     implementation 'com.airbnb.android:lottie:3.0.0'
     implementation 'io.github.kobakei:ratethisapp:1.2.0'
     implementation group: 'com.google.apis', name: 'google-api-services-translate', version: 'v2-rev48-1.22.0'
     implementation group: 'com.google.api-client', name: 'google-api-client-gson', version: '1.25.0'
 
-    implementation 'androidx.navigation:navigation-fragment:2.3.3'
-    implementation 'androidx.navigation:navigation-ui:2.3.3'
+    implementation 'com.google.guava:guava:30.1.1-jre'
+
+    implementation 'androidx.navigation:navigation-fragment:2.3.4'
+    implementation 'androidx.navigation:navigation-ui:2.3.4'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    testImplementation 'junit:junit:4.12'
+    testImplementation "org.mockito:mockito-core:1.9.5"
+    testImplementation "org.robolectric:robolectric:3.3.2"
+
+
+    //Testing
+
+    androidTestImplementation 'androidx.test:core:1.3.0'
+
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
     //Testing
-    testImplementation 'junit:junit:4.13.1'
-    testImplementation 'org.mockito:mockito-core:1.10.19'
+
     androidTestImplementation 'androidx.test:core:1.3.0'
 
     // AndroidJUnitRunner and JUnit Rules
@@ -167,13 +191,18 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-accessibility:3.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-web:3.3.0'
     androidTestImplementation 'androidx.test.espresso.idling:idling-concurrent:3.3.0'
-    androidTestImplementation "androidx.navigation:navigation-testing:2.3.3"
 
     // The following Espresso dependency can be either "implementation"
     // or "androidTestImplementation", depending on whether you want the
     // dependency to appear on your APK's compile classpath or the test APK
     // classpath.
     androidTestImplementation 'androidx.test.espresso:espresso-idling-resource:3.3.0'
+
+
+    // The following Espresso dependency can be either "implementation"
+    // or "androidTestImplementation", depending on whether you want the
+    // dependency to appear on your APK's compile classpath or the test APK
+    // classpath.
     //
     implementation('com.google.code.findbugs:jsr305:3.0.2')
     implementation 'com.jakewharton:butterknife:9.0.0-rc2'
@@ -183,12 +212,12 @@ dependencies {
     implementation 'com.github.skydoves:colorpickerpreference:1.0.7'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     // firebase library
-    implementation 'com.google.firebase:firebase-auth:20.0.2'
-    implementation 'com.google.firebase:firebase-config:20.0.3'
+    implementation 'com.google.firebase:firebase-auth:20.0.3'
+    implementation 'com.google.firebase:firebase-config:20.0.4'
     implementation 'com.google.firebase:firebase-core:18.0.2'
-    implementation 'com.google.firebase:firebase-database:19.6.0'
+    implementation 'com.google.firebase:firebase-database:19.7.0'
     implementation 'com.google.firebase:firebase-messaging:21.0.1'
-    implementation 'com.google.firebase:firebase-inappmessaging-display:19.1.4'
+    implementation 'com.google.firebase:firebase-inappmessaging-display:19.1.5'
     implementation 'com.google.firebase:firebase-perf:19.1.1'
     implementation 'com.google.firebase:firebase-storage:19.2.1'
     implementation 'com.firebaseui:firebase-ui-database:5.0.0'
@@ -200,7 +229,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
 
     //Firebase chrashlitics
-    implementation 'com.google.firebase:firebase-crashlytics:17.3.1'
+    implementation 'com.google.firebase:firebase-crashlytics:17.4.0'
     implementation 'com.google.firebase:firebase-analytics:18.0.2'
     implementation("com.google.guava:guava:30.0-android")
 
@@ -212,9 +241,7 @@ dependencies {
     implementation 'com.github.OTTAA-Project:PictogramsLibrary:0.1.4'
 
 
-
 }
-
 
 
 configurations {
@@ -236,4 +263,3 @@ configurations.all {
 }
 */
 apply plugin: 'com.google.gms.google-services'
-
